# Germinal

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: app_deps.rs  container.rs  effects.rs  host.rs  lib.rs  main.rs  pty_pump.rs
crates/application/: Cargo.toml
crates/application/src/: gnative.rs  gshell.rs  lib.rs  rendering.rs  runtime.rs
crates/domain/: Cargo.toml
crates/domain/src/gshell/: aggregate.rs  entity.rs  mod.rs  protocol.rs  vo.rs
crates/domain/src/rendering/: entity.rs  mod.rs  vo.rs
crates/domain/src/workspace/: aggregate.rs  entity.rs  error.rs  mod.rs  vo.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs  pty.rs  renderer.rs  window.rs
crates/infra/src/pty/: fake.rs  mod.rs  unix.rs
crates/infra/src/renderer/: mod.rs  wgpu.rs
crates/infra/src/terminal/: alacritty.rs  mod.rs
crates/ports/: Cargo.toml
crates/ports/src/: lib.rs  pty.rs  renderer.rs  terminal.rs  window.rs
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/content/docs/: index.md
docs/src/content/docs/design/: 01-research.md  02-glossary.md  03-overview.md  04-properties.md  05-requirements-breakdown.md  06-layered-architecture.md  07-domain-driven-design.md
