[package]
name = "germinal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
germinal-application.workspace = true
germinal-domain.workspace = true
germinal-infra.workspace = true
germinal-ports.workspace = true

compio = { workspace = true, features = ["runtime", "macros", "time"] }
kudi.workspace = true
