[package]
name = "germinal-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
germinal-ports.workspace = true

rustix-openpty = "0.2"
rustix = "1.1"
compio = { workspace = true, features = ["runtime", "io", "async-fd"] }
