[package]
name = "germinal-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
germinal-ports.workspace = true

rustix-openpty = "0.2"
rustix = "1.1"
compio = { workspace = true, features = ["runtime", "io", "time", "async-fd"] }
winit = "0.30"
wgpu = "29.0"
glyphon = "0.11"
alacritty_terminal = { version = "0.26", default-features = false }
